Bug 820629 - animateTransform should not animate non-transform-type attributes r=dholbert